--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
   <header>
     <h1 id="title">Paleta de Cores</h1>
   </header>
-  <div>
+  <section>
     <ul id="color-palette">
-      <li class="color"></li>
-      <li class="color"></li>
-      <li class="color"></li>
-      <li class="color"></li>
     </ul>
-  </div>
+  </section>
+  <section>
+    <div id="pixel-board">
+    </div>
+  </section>
+
   <script src="script.js"></script>
 </body>
 </html>
