--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
     <h1 id="title">Paleta de Cores</h1>
   </header>
   <section>
-    <ul id="color-palette">
-    </ul>
+    <ul id="color-palette"></ul>
   </section>
   <section>
-    <div id="pixel-board">
-    </div>
+    <button id="clear-board">Limpar</button>
+    <input id="board-size" type="number" min="1" placeholder="Digite o valor">
+    <button id="generate-board">VQV</button>
+  </section>
+  <section>
+    <div id="pixel-board"></div>
   </section>
 
   <script src="script.js"></script>
