--- a/index.html
+++ b/index.html
@@ -5,24 +5,27 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Flavors&display=swap" rel="stylesheet">  
   <title>Pixels Art</title>
 </head>
 <body>
-  <header>
-    <h1 id="title">Paleta de Cores</h1>
-  </header>
-  <section>
-    <ul id="color-palette"></ul>
-  </section>
-  <section>
-    <button id="clear-board">Limpar</button>
-    <input id="board-size" type="number" min="1" placeholder="Digite o valor">
-    <button id="generate-board">VQV</button>
-  </section>
-  <section>
-    <div id="pixel-board"></div>
-  </section>
-
+  <main class="main">
+    <header>
+      <h1 id="title">Paleta de Cores</h1>
+    </header>
+    <section class="palette">
+      <ul id="color-palette"></ul>
+    </section>
+    <section class="buttons">
+      <button id="clear-board">Limpar</button>
+      <input id="board-size" type="number" min="1" placeholder="Digite o valor">
+      <button id="generate-board">VQV</button>
+    </section>
+    <section class="pixels">
+      <div id="pixel-board"></div>
+    </section>
+  </main>
   <script src="script.js"></script>
 </body>
 </html>
