correção lint e lint:style

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </section>
     <section class="buttons">
       <button id="clear-board">Limpar</button>
-      <input id="board-size" type="number" min="1" placeholder="Digite o valor">
+      <input id="board-size" type="number" min="1" placeholder="Digite um valor">
       <button id="generate-board">VQV</button>
     </section>
     <section class="pixels">
